--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">site maker</a></section><section class="header12 cid-rhdr6AHJpy mbr-fullscreen mbr-parallax-background" id="header12-3">
+<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="header12 cid-rhdr6AHJpy mbr-fullscreen mbr-parallax-background" id="header12-3">
 
     
 
@@ -219,7 +219,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="MnRBNYMHAEgPH9bAg/e5XW7hgKIn/C55nxJdwg36/6M0RwXH14DcG4dYqexIHVOO/Ib6Ufq6CB7XxpNTX9Sv1WxcbtXjMTvawVKPajELEdk0UijPh+wW3GEr193pdHv7">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="b7Uv6RzlGMYUwt6WZOG0neiySqfSvoh6K3c/2ejWciy8nvmMTHjIAxlDdbBiJVtrcgurP/QeQhbowbdqUNtuwQN+AikhxB3dOQE5p1mDFtOjUWcby3jniLwefOM/gGVi">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -264,8 +264,8 @@
         <div class="media-container-row content text-white">
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
-                    <a href="https://mobirise.com/">
-                        <img src="assets/images/logo2.png" alt="Mobirise">
+                    <a href="#top">
+                        <img src="assets/images/img-20190205-wa0002-192x192.jpg" alt="Mobirise" title="">
                     </a>
                 </div>
             </div>
@@ -283,10 +283,8 @@
                     Contacts
                 </h5>
                 <p class="mbr-text">
-                    Email: support@mobirise.com
-                    <br>Phone: +1 (0) 000 0000 001
-                    <br>Fax: +1 (0) 000 0000 002
-                </p>
+                    Email: biofurcate@gmail.com
+                    <br>Phone: + 91 7029848129<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">
