--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="header12 cid-rhdr6AHJpy mbr-fullscreen mbr-parallax-background" id="header12-3">
+<section class="engine"><a href="https://mobirise.info/c">free web builder</a></section><section class="header12 cid-rhdr6AHJpy mbr-fullscreen mbr-parallax-background" id="header12-3">
 
     
 
@@ -81,9 +81,7 @@
                     <h1 class="mbr-section-title pb-3 mbr-white mbr-bold mbr-fonts-style display-1">Biofurcate</h1>
                     <p class="mbr-text pb-3 mbr-white mbr-fonts-style display-5">
                         Full screen intro with background image, color overlay and icons</p>
-                    <div class="mbr-section-btn align-center py-2">
-                        <a class="btn btn-md btn-secondary display-4" href="https://mobirise.co">MORE</a>
-                    </div>
+                    <div class="mbr-section-btn align-center py-2"><a class="btn btn-md btn-secondary display-4" href="https://mobirise.co">Coming Soon ...</a></div>
 
                     <div class="icons-media-container mbr-white">
                         <div class="card col-12 col-md-6 col-lg-3">
@@ -219,7 +217,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="b7Uv6RzlGMYUwt6WZOG0neiySqfSvoh6K3c/2ejWciy8nvmMTHjIAxlDdbBiJVtrcgurP/QeQhbowbdqUNtuwQN+AikhxB3dOQE5p1mDFtOjUWcby3jniLwefOM/gGVi">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="H9aIziSAUVBKIwtmFdV3cQWnF0ZvOKMQZdbHGWnMYdKCneQNppZLlk2SVOHS398/bqR3jnZ7xgnvfYdoSRPIQdyIzWLxP9cvhD6gLyzNt1m8NBAVERfeRrKo4E0UiycS">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -306,7 +304,7 @@
             <div class="media-container-row mbr-white">
                 <div class="col-sm-6 copyright">
                     <p class="mbr-text mbr-fonts-style display-7">
-                        © Copyright 2017 Mobirise - All Rights Reserved
+                        © Copyright 2019 Biofurcate - All Rights Reserved
                     </p>
                 </div>
                 <div class="col-md-6">
