--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="index.html#header12-3" target="_blank">
+                    <a class="nav-link link text-white display-4" href="index.html" target="_blank">
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>
                         Services
                     </a>
@@ -68,7 +68,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free website creation software</a></section><section class="header12 cid-rhdr6AHJpy mbr-fullscreen mbr-parallax-background" id="header12-3">
+<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section class="header12 cid-rhdr6AHJpy mbr-fullscreen mbr-parallax-background" id="header12-3">
 
     
 
@@ -203,7 +203,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="LUCpa5NklOZObRxGdxKsRHCh1by34/g8g3s7KLmVUhyqN6Z6a2CTVPNZH9Qtcfd60KWVGn7uIriK2fnyBbS0U8ZJPzRhXdQU0O2x+2So7EeV9erdwkaY+0nqDz3pCTO6">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="RIQz3Ac7WxuoaKM8mzSU0JPsqBeWxCRpqVs/6/SVoPg0Q4TwJuuemjODU8OiLhJ/nOAc/sH0llQbClMEYeES5LCjH876fcMYp0q7fwhaRNiinhtFTeBgU0VMBtqNtll/">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
