create github pages

--- a/page1.html
+++ b/page1.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">website design templates</a></section><section class="cid-rheCeit1wC mbr-parallax-background" id="header15-j">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="cid-rheCeit1wC mbr-parallax-background" id="header15-j">
 
     
 
@@ -87,7 +87,7 @@
             <div data-form-alert="" hidden="" class="align-center">
                 Thanks for filling out the form!
             </div>
-            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Uw6fgXg3X8IiF92Y41ZjQnnZsVPcihTe2V0yKOc0CpKjFjmJeeX11y3aouG6n2R6QYQ762U4/MBaB03OZixl7cTkJCvtMiFaO9JHDzHfYIv4/kZdy5zvwxe9soHBlKmW">
+            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Yt0+9rUYRV3XQ3e7j1aqBkxW6DIBlacy5yhQbr+iuCLX4OSxMRvqlc8Fp3QcI9J+awjaEBQdcqzP2im3BUfIuR+/q+Kl6TMy3Hstd18aEum5vcqO+b0Aj119gHf/H6N6">
                 <div data-for="name">
                     <div class="form-group">
                         <input type="text" class="form-control px-3" name="name" data-form-field="Name" placeholder="Name" required="" id="name-header15-j">
