create github pages

--- a/page1.html
+++ b/page1.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="cid-rheCeit1wC mbr-parallax-background" id="header15-j">
+<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="cid-rheCeit1wC mbr-parallax-background" id="header15-j">
 
     
 
@@ -87,7 +87,7 @@
             <div data-form-alert="" hidden="" class="align-center">
                 Thanks for filling out the form!
             </div>
-            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Yt0+9rUYRV3XQ3e7j1aqBkxW6DIBlacy5yhQbr+iuCLX4OSxMRvqlc8Fp3QcI9J+awjaEBQdcqzP2im3BUfIuR+/q+Kl6TMy3Hstd18aEum5vcqO+b0Aj119gHf/H6N6">
+            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="gZyvRodM49iqf/+Ihp1WkT+DIkWB73QZlAdveFdIwXrSviAfeRJtvZ+CGUWog2rThsrIO5Q8si+4eobIc6ymntPraCGpr+dAEY4kNBZOTMBerkL/0sQBmj3LwzLavS9I">
                 <div data-for="name">
                     <div class="form-group">
                         <input type="text" class="form-control px-3" name="name" data-form-field="Name" placeholder="Name" required="" id="name-header15-j">
