--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="header12 cid-rhdr6AHJpy mbr-fullscreen mbr-parallax-background" id="header12-3">
+<section class="engine"><a href="https://mobirise.info/i">site creation software</a></section><section class="header12 cid-rhdr6AHJpy mbr-fullscreen mbr-parallax-background" id="header12-3">
 
     
 
@@ -85,7 +85,7 @@
                     <div class="icons-media-container mbr-white">
                         <div class="card col-12 col-md-6 col-lg-3">
                             <div class="icon-block">
-                            <a href="index.html" target="_blank">
+                            <a href="index.html">
                                 <span class="mbr-iconfont socicon-google-scholar socicon" style="color: rgb(247, 237, 74); fill: rgb(247, 237, 74); font-size: 60px;"></span>
                             </a>
                             </div>
@@ -104,7 +104,7 @@
 
                         <div class="card col-12 col-md-6 col-lg-3">
                             <div class="icon-block">
-                                <a href="index.html" target="_blank">
+                                <a href="index.html">
                                     <span class="mbr-iconfont socicon-quora socicon" style="font-size: 63px; color: rgb(247, 237, 74); fill: rgb(247, 237, 74);"></span>
                                 </a>
                             </div>
@@ -114,7 +114,7 @@
 
                         <div class="card col-12 col-md-6 col-lg-3">
                             <div class="icon-block">
-                                <a href="index.html" target="_blank">
+                                <a href="index.html">
                                     <span class="mbr-iconfont mobi-mbri-users mobi-mbri" style="color: rgb(247, 237, 74); fill: rgb(247, 237, 74);"></span>
                                 </a>
                             </div>
@@ -203,7 +203,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="w99VqY+ks8jt91gXOCwXyczb0LlRoN/JZdRq9g9iBq91225n642YB+00Xhccj8LNXl9HrPLg/FMZdTqI/Biyo2qghg448PoTbfTc/trcOw1Qk6koeifcGn9TEJgu0Z27">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="WLhX7aWCctPtCdBLSsb+jy2VZ6wUbVn7UsdnHH/Y+dOSeevHFaxIaseXxiHWgKqqj5eJTlyGGIXO7bfG/SwEzayRl5rwv82i5NfYNclL6LtEUQXUggc2qsQ7ISUwWGAJ">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
