create github pages

--- a/page1.html
+++ b/page1.html
@@ -39,18 +39,18 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="index.html">
+                    <a href="https://biofurcate.github.io/">
                          <img src="assets/images/logopit-1549395253940-94x94.png" alt="Mobirise" title="" style="height: 4.6rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-5" href="index.html">
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-5" href="https://biofurcate.github.io/">
                         Biofurcate</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="index.html">
-                        <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>
+                    <a class="nav-link link text-white display-4" href="https://biofurcate.github.io/"><span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>
+                        
                         Services
                     </a>
                 </li>
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="cid-rheCeit1wC mbr-parallax-background" id="header15-j">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="cid-rheCeit1wC mbr-parallax-background" id="header15-j">
 
     
 
@@ -87,7 +87,7 @@
             <div data-form-alert="" hidden="" class="align-center">
                 Thanks for filling out the form!
             </div>
-            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="gZyvRodM49iqf/+Ihp1WkT+DIkWB73QZlAdveFdIwXrSviAfeRJtvZ+CGUWog2rThsrIO5Q8si+4eobIc6ymntPraCGpr+dAEY4kNBZOTMBerkL/0sQBmj3LwzLavS9I">
+            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="dle1cSh86i9RnjgPzTSUplSyiyb0KRrU4LMgPFEsqig7wU4QoCx8BNP4kc/VDS7XIJmHmrPxfB9JDZl9XtVQLwa7Pbc4Ar0MFosoZqzjUNXPmdUdkedIPvt7ImyxrYK6">
                 <div data-for="name">
                     <div class="form-group">
                         <input type="text" class="form-control px-3" name="name" data-form-field="Name" placeholder="Name" required="" id="name-header15-j">
