--- a/page2.html
+++ b/page2.html
@@ -43,14 +43,14 @@
                          <img src="assets/images/logopit-1549395253940-94x94.png" alt="Mobirise" title="" style="height: 4.6rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-5" href="index.html">
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-5" href="https://biofurcate.github.io/">
                         Biofurcate</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="index.html">
-                        <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>
+                    <a class="nav-link link text-white display-4" href="https://biofurcate.github.io/"><span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>
+                        
                         Services
                     </a>
                 </li>
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple site builder</a></section><section class="header9 cid-rhFBeXjCoN mbr-parallax-background" id="header9-o">
+<section class="engine"><a href="https://mobirise.info/e">how to make your own website</a></section><section class="header9 cid-rhFBeXjCoN mbr-parallax-background" id="header9-o">
 
     
 
