create github pages

--- a/page1.html
+++ b/page1.html
@@ -39,11 +39,11 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://biofurcate.github.io/">
+                    <a href="index.html">
                          <img src="assets/images/logopit-1549395253940-94x94.png" alt="Mobirise" title="" style="height: 4.6rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-5" href="https://biofurcate.github.io/">
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-5" href="index.html">
                         Biofurcate</a></span>
             </div>
         </div>
@@ -60,13 +60,13 @@
                         About Us
                     </a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-white-outline display-4" href="tel:+91-7029848129"><span class="socicon socicon-viber mbr-iconfont mbr-iconfont-btn" style="color: rgb(36, 207, 20);"><br></span>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-white-outline display-4" href="tel:+91-7029848129"><span class="socicon socicon-viber mbr-iconfont mbr-iconfont-btn" style="color: rgb(36, 207, 20);"></span>
                     </a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="cid-rheCeit1wC mbr-parallax-background" id="header15-j">
+<section class="engine"><a href="https://mobirise.info/q">free responsive site templates</a></section><section class="cid-rheCeit1wC mbr-parallax-background" id="header15-j">
 
     
 
@@ -87,7 +87,7 @@
             <div data-form-alert="" hidden="" class="align-center">
                 Thanks for filling out the form!
             </div>
-            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="dle1cSh86i9RnjgPzTSUplSyiyb0KRrU4LMgPFEsqig7wU4QoCx8BNP4kc/VDS7XIJmHmrPxfB9JDZl9XtVQLwa7Pbc4Ar0MFosoZqzjUNXPmdUdkedIPvt7ImyxrYK6">
+            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ZuQLfBJVwvDsbB5v7x2aRedxA+3N8FCcLaDc7nLrFLVd4aBOyzeDdYeHFrLXMzu4zqesecLxT59NlLDwK+mVs8urraZUv+adZHlkWg5/gZe8csE34WAUn++zdPVOL+h0">
                 <div data-for="name">
                     <div class="form-group">
                         <input type="text" class="form-control px-3" name="name" data-form-field="Name" placeholder="Name" required="" id="name-header15-j">
