--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                          <img src="assets/images/logopit-1549395253940-94x94.png" alt="Mobirise" title="" style="height: 4.6rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-5" href="https://biofurcate.github.io/">
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-5" href="index.html">
                         Biofurcate</a></span>
             </div>
         </div>
@@ -62,13 +62,13 @@
                         About Us
                     </a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-white-outline display-4" href="tel:+91-7029848129"><span class="socicon socicon-viber mbr-iconfont mbr-iconfont-btn" style="color: rgb(36, 207, 20);"><br></span>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-white-outline display-4" href="tel:+91-7029848129"><span class="socicon socicon-viber mbr-iconfont mbr-iconfont-btn" style="color: rgb(36, 207, 20);"></span>
                     </a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="header12 cid-rhdr6AHJpy mbr-fullscreen mbr-parallax-background" id="header12-3">
+<section class="engine"><a href="https://mobirise.info/k">develop own website</a></section><section class="header12 cid-rhdr6AHJpy mbr-fullscreen mbr-parallax-background" id="header12-3">
 
     
 
@@ -85,7 +85,7 @@
                     <div class="icons-media-container mbr-white">
                         <div class="card col-12 col-md-6 col-lg-3">
                             <div class="icon-block">
-                            <a href="index.html">
+                            <a href="https://biofurcate.github.io/">
                                 <span class="mbr-iconfont socicon-google-scholar socicon" style="color: rgb(247, 237, 74); fill: rgb(247, 237, 74); font-size: 60px;"></span>
                             </a>
                             </div>
@@ -95,7 +95,7 @@
 
                         <div class="card col-12 col-md-6 col-lg-3">
                             <div class="icon-block">
-                                <a href="index.html">
+                                <a href="https://biofurcate.github.io/">
                                     <span class="mbr-iconfont mbrib-edit" style="color: rgb(247, 237, 74); fill: rgb(247, 237, 74); font-size: 96px;"></span>
                                 </a>
                             </div>
@@ -104,7 +104,7 @@
 
                         <div class="card col-12 col-md-6 col-lg-3">
                             <div class="icon-block">
-                                <a href="index.html">
+                                <a href="https://biofurcate.github.io/">
                                     <span class="mbr-iconfont socicon-quora socicon" style="font-size: 63px; color: rgb(247, 237, 74); fill: rgb(247, 237, 74);"></span>
                                 </a>
                             </div>
@@ -114,7 +114,7 @@
 
                         <div class="card col-12 col-md-6 col-lg-3">
                             <div class="icon-block">
-                                <a href="index.html">
+                                <a href="https://biofurcate.github.io/">
                                     <span class="mbr-iconfont mobi-mbri-users mobi-mbri" style="color: rgb(247, 237, 74); fill: rgb(247, 237, 74);"></span>
                                 </a>
                             </div>
@@ -203,7 +203,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="yLGQU16A9YgKEcfXBkw9qsuDyrCbt2ZRGxsPkJEebgjpt/4a4juK4fKbF3CpDCYDDh7Kg2uaROkW21cWZELFt11s8QtjCDnsV3YQo1FJgqpipJH+20hbWFaPpWJyQmC9">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="E5RUhCinWF3MROXB6+eSh7PWCwQ8LonqQn6f22CfAgShAXZL7GFSqdP886vqETDceVca7FybnzIZDFMZXBuhfjsBrFWsSBEGlesFGcpzb5krGYEsfOVESgmhU1iQy8Ej">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
