--- a/page2.html
+++ b/page2.html
@@ -43,7 +43,7 @@
                          <img src="assets/images/logopit-1549395253940-94x94.png" alt="Mobirise" title="" style="height: 4.6rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-5" href="https://biofurcate.github.io/">
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-5" href="index.html">
                         Biofurcate</a></span>
             </div>
         </div>
@@ -60,13 +60,13 @@
                         About Us
                     </a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-white-outline display-4" href="tel:+91-7029848129"><span class="socicon socicon-viber mbr-iconfont mbr-iconfont-btn" style="color: rgb(36, 207, 20);"><br></span>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-white-outline display-4" href="tel:+91-7029848129"><span class="socicon socicon-viber mbr-iconfont mbr-iconfont-btn" style="color: rgb(36, 207, 20);"></span>
                     </a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make your own website</a></section><section class="header9 cid-rhFBeXjCoN mbr-parallax-background" id="header9-o">
+<section class="engine"><a href="https://mobirise.info/g">how to build a site for free</a></section><section class="header9 cid-rhFBeXjCoN mbr-parallax-background" id="header9-o">
 
     
 
