--- a/page2.html
+++ b/page2.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build a site for free</a></section><section class="header9 cid-rhFBeXjCoN mbr-parallax-background" id="header9-o">
+<section class="engine"><a href="https://mobirise.info/i">free website creation software</a></section><section class="header9 cid-rhFBeXjCoN mbr-parallax-background" id="header9-o">
 
     
 
@@ -101,7 +101,7 @@
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
                 <p class="mbr-text mb-0 mbr-fonts-style display-7">
-                    © Copyright 2019 Mobirise - All Rights Reserved
+                    © Copyright 2019 Biofurcate - All Rights Reserved
                 </p>
             </div>
         </div>
