create github pages

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="header12 cid-rhdr6AHJpy mbr-fullscreen mbr-parallax-background" id="header12-3">
+<section class="engine"><a href="https://mobirise.info/k">develop own website</a></section><section class="header12 cid-rhdr6AHJpy mbr-fullscreen mbr-parallax-background" id="header12-3">
 
     
 
@@ -112,7 +112,7 @@
 
                         <div class="card col-12 col-md-6 col-lg-3">
                             <div class="icon-block">
-                                <a href="https://biofurcate.github.io/">
+                                <a href="https://biofurcate.github.io/page3.html">
                                     <span class="mbr-iconfont mbri-idea" style="color: rgb(247, 237, 74); fill: rgb(247, 237, 74);"></span>
                                 </a>
                             </div>
@@ -201,7 +201,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="gJcwEZ/OSRSsloDB+LZ/RwExYO+KVK3mt3IzxIE1LIM7VjaShofNPIepq6MbWIUI8VzFIKWPmrfpw7GugAE+Mr8ZAoGHO+OS2HkioDdoMtSpLiP7SLMy5kwfMoDkGPHT">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="dox1avse6rKaQvXq7f4VetE45xlzvbHhmtXKXt2hP/cSC2YRXcLiVY87x9xNDhJapxG0k0YM9M/H/aCwAnc3/GfEEfzwqi/rzePuHqZPMidrjT1VGyc3w1Y7u+dTLkub">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
