--- a/page3.html
+++ b/page3.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="header9 cid-rmeSz3he7U mbr-fullscreen mbr-parallax-background" id="header9-v">
+<section class="engine"><a href="https://mobirise.info/b">how to create your own site</a></section><section class="header9 cid-rmeSz3he7U mbr-fullscreen mbr-parallax-background" id="header9-v">
 
     
 
@@ -77,10 +77,8 @@
         <div class="media-container-column mbr-white">
             <h1 class="mbr-section-title align-left mbr-bold pb-3 mbr-fonts-style display-1">Career Assistance
 </h1>
-            
-            <p class="mbr-text align-left pb-3 mbr-fonts-style display-5">
-                Click any text to edit or style it. Select text to insert a link. Click blue "Gear" icon in the top right corner to hide/show buttons, text, title and change the block background. Click red "+" in the bottom right corner to add a new block. Use the top left menu to create new pages, sites and add themes.
-            </p>
+            <h3 class="mbr-section-subtitle align-left mbr-light pb-3 mbr-fonts-style display-5"><strong>It is the time to materialize your dream into reality. We are offering 100% free assistance for admission in top universities*</strong></h3>
+            <p class="mbr-text align-left pb-3 mbr-fonts-style display-4"><br>*subjected to admission guidelines, we don't have any public/private collaboration</p>
             <div class="mbr-section-btn align-left"><a class="btn btn-md btn-primary display-4" href="https://docs.google.com/forms/d/e/1FAIpQLSeZZofqlwqMgeM4E6sMxiJYYg-V-hGVEynYu7zVFKWBUzODsQ/viewform">Click Here to Apply</a>
                 <a class="btn btn-md btn-danger display-4" href="assets/files/Admission_biofurcate.pdf">Download Borchure</a></div>
         </div>
