--- a/careerassistance.html
+++ b/careerassistance.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">portfolio web templates</a></section><section class="header9 cid-rmeSz3he7U mbr-fullscreen mbr-parallax-background" id="header9-v">
+<section class="engine"><a href="https://mobirise.info/g">build a site for free</a></section><section class="header9 cid-rmeSz3he7U mbr-fullscreen mbr-parallax-background" id="header9-v">
 
     
 
@@ -78,7 +78,7 @@
             <h1 class="mbr-section-title align-left mbr-bold pb-3 mbr-fonts-style display-1">Career Assistance
 </h1>
             <h3 class="mbr-section-subtitle align-left mbr-light pb-3 mbr-fonts-style display-5"><strong>It is the time to materialize your dream into reality. We are offering 100% free assistance for admission in top universities*</strong></h3>
-            <p class="mbr-text align-left pb-3 mbr-fonts-style display-4"><br>*subjected to admission guidelines, we don't have any public/private collaboration</p>
+            <p class="mbr-text align-left pb-3 mbr-fonts-style display-4"><br>*subject to admission guidelines, we don't have any public/private collaboration</p>
             <div class="mbr-section-btn align-left"><a class="btn btn-md btn-primary display-4" href="https://docs.google.com/forms/d/e/1FAIpQLSeZZofqlwqMgeM4E6sMxiJYYg-V-hGVEynYu7zVFKWBUzODsQ/viewform">Click Here to Apply</a>
                 <a class="btn btn-md btn-danger display-4" href="assets/files/Admission_biofurcate.pdf">Download Borchure</a></div>
         </div>
