--- a/internship.html
+++ b/internship.html
@@ -43,7 +43,7 @@
                          <img src="assets/images/logopit-1549395253940-94x94.png" alt="Mobirise" title="" style="height: 4.6rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-5" href="index.html">Biofurcate | Home</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-5" href="index.html">Biofurcate&nbsp;</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create a web page for free</a></section><section class="header9 cid-rhFBeXjCoN mbr-parallax-background" id="header9-o">
+<section class="engine"><a href="https://mobirise.info/h">create a web page</a></section><section class="header9 cid-rhFBeXjCoN mbr-parallax-background" id="header9-o">
 
     
 
