create github pages

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create your own website</a></section><section class="header12 cid-rhdr6AHJpy mbr-fullscreen mbr-parallax-background" id="header12-3">
+<section class="engine"><a href="https://mobirise.info/c">free site builder</a></section><section class="header12 cid-rhdr6AHJpy mbr-fullscreen mbr-parallax-background" id="header12-3">
 
     
 
@@ -200,7 +200,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="fdCyxvaKHVPUnl+FpwALhloutB3I66UIF/W28ZiWMSlG61tMBbNS1Sj0XTKMZO190qKQFlByXomXxh0HmcQ3TODo26GDoXr6ORx7+8OOb9gM0fsW+OMgzt9Hj/8q2zxF">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="2tCJQl82utRXRhuOOrIG6dLr4H+2kahzJbJJZj6GvkFRUGy+0tOBFpKXOJw1V84Wztzbu854a72x4pwOhOqTvASotGWiFka9n5nDzLvJe8GKSbTy8GYpxAdWt5DsVD22">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -259,8 +259,8 @@
                     Contacts
                 </h5>
                 <p class="mbr-text">
-                    Email: <strong><a href="mailto:biofurcate@gmai.com"><b></b></a><b><a href="https://accounts.google.com/ServiceLogin/signinchooser?service=mail&passive=true&rm=false&continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ss=1&scc=1&ltmpl=default&ltmplcache=2&emr=1&osid=1&flowName=GlifWebSignIn&flowEntry=ServiceLogin">biofurcate@gmail.com
-                    </a></b><br></strong>Phone: <a href="tel:+91-7029848129" class="text-danger">+ 91-7029848129</a><br></p>
+                    Email: <strong><a href="mailto:biofurcate@gmai.com"><b></b></a><b><a href="https://accounts.google.com/ServiceLogin/signinchooser?service=mail&passive=true&rm=false&continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ss=1&scc=1&ltmpl=default&ltmplcache=2&emr=1&osid=1&flowName=GlifWebSignIn&flowEntry=ServiceLogin" class="text-success">biofurcate@gmail.com
+                    </a></b><br></strong>Phone: <a href="tel:+91-7029848129" class="text-primary">+ 91-7029848129</a><br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">Downloads</h5>
